Update from https://github.com/babsballetschool/website/commit/10511dafbd67e93cb16c5036db4a3737d594806f

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ vrijdag avond
 Tijdens de finale-avond is er een vak- en publieksjury aanwezig die de winnaars kiezen, er zijn diverse prijzen te winnen (aanmoediging, beste performance, beste techniek, origineelste uitvoering etc. </p>
 <p>Als je in Overbetuwe woont of op school zit kun je je aanmelden voor de workshops via theaterdekik.nl </p>
 </section><section><h1 id="presentaties-2023-2024">Presentaties 2023-2024</h1>
-<p><img src="resources/image/algemeen/templates/snowflakes-ballerina.jpg" alt="Presentaties Babs&#39;Balletschool"> 
+<p><img src="resources/image/algemeen/snowflakes-ballerina.jpg/" alt="Presentaties Babs&#39;Balletschool"> 
 In het nieuwe dansseizoen staan natuurlijk de lessen weer centraal maar organiseren we ook diverse presentaties. Op <strong>zaterdag 16 december</strong> presenteren we een mini voorstelling WINTER in Theater de KiK en op <strong>25 mei 2024</strong> een Open Podium waar leerlingen hun eigen werk kunnen tonen. 
 Kom kijken of meedoen en zet alle data alvast in de agenda! </p>
 </section><section><h1 id="ballet-spelletje-balletris">Ballet Spelletje Balletris</h1>
