--- a/index.html
+++ b/index.html
@@ -40,15 +40,15 @@ Na de zomer weer lekker dansen? </p>
 <p><a href="https://www.babsballetschool.nl/wanneer.html">Rooster 2023-2024</a></p>
 </section><section><h1 id="dance-battle--workshops">Dance Battle &amp; workshops</h1>
 <p><img src="resources/image/algemeen/Dancebattle%202023.jpg" alt="Dance Battle bij Theater de KiK "> 
-<strong>27 oktober t/m 1 december</strong> kun je mee doen met dansworkshops voor jongerenen. (12 tot 18 jaar)
-vrijdag avond
+<strong>27 oktober t/m 1 december</strong> kun je mee doen met dansworkshops voor jongerenen. (12 tot 18 jaar)</p>
+<p>vrijdag avond
 19:00 - 20:15 Ballet / Lyrics / Moderne dans 
 20:30 - 21:45 uur Streetdance / Hiphop / Urban Dance / Jazzballet</p>
 <p>De jongeren die meedoen aan de workshops mogen ook optreden tijdens de finale-avond van de Dancebattle op <strong>vrijdag 1 december</strong>
 Tijdens de finale-avond is er een vak- en publieksjury aanwezig die de winnaars kiezen, er zijn diverse prijzen te winnen (aanmoediging, beste performance, beste techniek, origineelste uitvoering etc. </p>
 <p>Als je in Overbetuwe woont of op school zit kun je je aanmelden voor de workshops via theaterdekik.nl </p>
 </section><section><h1 id="presentaties-2023-2024">Presentaties 2023-2024</h1>
-<p><img src="resources/image/algemeen/snowflakes-ballerina.jpg/" alt="Presentaties Babs&#39;Balletschool"> 
+<p><img src="resources/image/algemeen/snowflakes-ballerina.jpg" alt="Presentaties Babs&#39;Balletschool"> 
 In het nieuwe dansseizoen staan natuurlijk de lessen weer centraal maar organiseren we ook diverse presentaties. Op <strong>zaterdag 16 december</strong> presenteren we een mini voorstelling WINTER in Theater de KiK en op <strong>25 mei 2024</strong> een Open Podium waar leerlingen hun eigen werk kunnen tonen. 
 Kom kijken of meedoen en zet alle data alvast in de agenda! </p>
 </section><section><h1 id="ballet-spelletje-balletris">Ballet Spelletje Balletris</h1>
