Update from https://github.com/babsballetschool/website/commit/4d238b0cf4a0a974b0995b1bf4bc696e89359134

--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@ Na de zomer weer lekker dansen? </p>
 </section><section><h1 id="dance-battle--workshops">Dance Battle &amp; workshops</h1>
 <p><img src="resources/image/algemeen/Dancebattle%202023.jpg" alt="Dance Battle bij Theater de KiK "> 
 <strong>27 oktober t/m 1 december</strong> kun je mee doen met dansworkshops voor jongerenen. (12 tot 18 jaar)</p>
-<p>vrijdag avond
-19:00 - 20:15 Ballet / Lyrics / Moderne dans 
+<p>vrijdag avond</p>
+<p>19:00 - 20:15 Ballet / Lyrics / Moderne dans 
 20:30 - 21:45 uur Streetdance / Hiphop / Urban Dance / Jazzballet</p>
 <p>De jongeren die meedoen aan de workshops mogen ook optreden tijdens de finale-avond van de Dancebattle op <strong>vrijdag 1 december</strong>
 Tijdens de finale-avond is er een vak- en publieksjury aanwezig die de winnaars kiezen, er zijn diverse prijzen te winnen (aanmoediging, beste performance, beste techniek, origineelste uitvoering etc. </p>
