--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@ Na de zomer weer lekker dansen? </p>
 <p><img src="resources/image/algemeen/Dancebattle%202023.jpg" alt="Dance Battle bij Theater de KiK "> 
 <strong>27 oktober t/m 1 december</strong> kun je mee doen met dansworkshops voor jongerenen. (12 tot 18 jaar)</p>
 <p>vrijdag avond</p>
-<p>19:00 - 20:15 Ballet / Lyrics / Moderne dans 
-20:30 - 21:45 uur Streetdance / Hiphop / Urban Dance / Jazzballet</p>
+<p>19:00 - 20:15 Ballet / Lyrics / Moderne dans </p>
+<p>20:30 - 21:45 uur Streetdance / Hiphop / Urban Dance / Jazzballet</p>
 <p>De jongeren die meedoen aan de workshops mogen ook optreden tijdens de finale-avond van de Dancebattle op <strong>vrijdag 1 december</strong>
 Tijdens de finale-avond is er een vak- en publieksjury aanwezig die de winnaars kiezen, er zijn diverse prijzen te winnen (aanmoediging, beste performance, beste techniek, origineelste uitvoering etc. </p>
 <p>Als je in Overbetuwe woont of op school zit kun je je aanmelden voor de workshops via <a href="http://www.theaterdekik.nl">www.theaterdekik.nl</a> </p>
