--- a/index.html
+++ b/index.html
@@ -42,14 +42,18 @@ Na de zomer weer lekker dansen? </p>
 <p><img src="resources/image/algemeen/Dancebattle%202023.jpg" alt="Dance Battle bij Theater de KiK "> 
 <strong>27 oktober t/m 1 december</strong> kun je mee doen met dansworkshops voor jongerenen. (12 tot 18 jaar)</p>
 <p>vrijdag avond</p>
-<p>19:00 - 20:15 Ballet / Lyrics / Moderne dans </p>
-<p>20:30 - 21:45 uur Streetdance / Hiphop / Urban Dance / Jazzballet</p>
+<p>19:00 - 20:15 Ballet / Jazz moves / Moderne dans </p>
+<p>20:30 - 21:45 uur Streetdance / Hiphop / Urban Dance </p>
 <p>De jongeren die meedoen aan de workshops mogen ook optreden tijdens de finale-avond van de Dancebattle op <strong>vrijdag 1 december</strong>
-Tijdens de finale-avond is er een vak- en publieksjury aanwezig die de winnaars kiezen, er zijn diverse prijzen te winnen (aanmoediging, beste performance, beste techniek, origineelste uitvoering etc. </p>
+Tijdens de finale-avond is er een vak- en publieksjury aanwezig die de winnaars kiezen, er zijn diverse prijzen te winnen </p>
 <p>Als je in Overbetuwe woont of op school zit kun je je aanmelden voor de workshops via <a href="http://www.theaterdekik.nl">www.theaterdekik.nl</a> </p>
+</section><section><h1 id="kijk-lessen">Kijk lessen</h1>
+<p><img src="resources/image/algemeen/opendag%209-12-09%20023.JPG" alt="Kijk lessen Babs&#39;Balletschool"> 
+in de week van 20 t/m 24 november 2023 zijn er weer Kijk-lessen. 
+Ouders/ familie zijn dan van harte welkom om tijdens de les naar de vorderingen te komen kijken. </p>
 </section><section><h1 id="presentaties-2023-2024">Presentaties 2023-2024</h1>
 <p><img src="resources/image/algemeen/snowflakes-ballerina.jpg" alt="Presentaties Babs&#39;Balletschool"> 
-In het nieuwe dansseizoen staan natuurlijk de lessen weer centraal maar organiseren we ook diverse presentaties. Op <strong>zaterdag 16 december</strong> presenteren we een mini voorstelling WINTER in Theater de KiK en op <strong>25 mei 2024</strong> een Open Podium waar leerlingen hun eigen werk kunnen tonen. 
+In het nieuwe dansseizoen staan natuurlijk de lessen weer centraal maar organiseren we ook diverse presentaties. Op <strong>zaterdag 16 december</strong> presenteren we een mini voorstelling WINTER in Theater de KiK 14:00 &amp; 15:30  en op <strong>25 mei 2024</strong> een Open Podium waar leerlingen hun eigen werk kunnen tonen. 
 Kom kijken of meedoen en zet alle data alvast in de agenda! </p>
 </section><section><h1 id="ballet-spelletje-balletris">Ballet Spelletje Balletris</h1>
 <p><img src="resources/image/balletris/babsballetschool-logo.gif" alt="dansplezier bij Babs&#39;Balletschool"> 
