--- a/index.html
+++ b/index.html
@@ -35,8 +35,9 @@
             <div class="where"><span>home</span></div>
             <section><h1 id="start-seizoen-2023-2024">Start seizoen 2023-2024</h1>
 <p><img src="resources/image/algemeen/balletklok.jpg" alt="dansrooster 2023-2024 bij Babs&#39;Balletschool"> 
-Na de zomer weer lekker dansen? </p>
+Wil je ook lekker dansen? </p>
 <p><a href="https://docs.google.com/forms/d/e/1FAIpQLScKKMDE3qj1KcmIxWGIdN7Re943kAck9iCVdcWpYOsYjp8lLA/viewform?usp=sf_link">Inschrijfformulier</a></p>
+<p>of vraag een proefles aan</p>
 <p><a href="https://www.babsballetschool.nl/wanneer.html">Rooster 2023-2024</a></p>
 </section><section><h1 id="dance-battle--workshops">Dance Battle &amp; workshops</h1>
 <p><img src="resources/image/algemeen/Dancebattle%202023.jpg" alt="Dance Battle bij Theater de KiK "> 
