--- a/hoeveel.html
+++ b/hoeveel.html
@@ -62,7 +62,7 @@
 </section><section><h2 id="dans-projecten">Dans Projecten</h2>
 <p>Dans projecten worden apart aangekondigd en kunnen varieren in prijs afhankelijk van de duur van het project.</p>
 </section><section><h2 id="betalings-regeling">Betalings regeling:</h2>
-<p>Is het bedrag voor u te hoog om in één keer te betalen dan kunt u ook een betalingsregeling aanvragen. Vraag gerust!  Mailen kan naar:<a href="mailto:&#98;&#97;&#x62;&#115;&#64;&#x62;&#97;&#x62;&#115;&#x62;&#x61;&#108;&#108;&#101;&#116;&#115;&#x63;&#x68;&#111;&#x6f;&#108;&#x2e;&#110;&#108;">&#98;&#97;&#x62;&#115;&#64;&#x62;&#97;&#x62;&#115;&#x62;&#x61;&#108;&#108;&#101;&#116;&#115;&#x63;&#x68;&#111;&#x6f;&#108;&#x2e;&#110;&#108;</a> </p>
+<p>Is het bedrag voor u te hoog om in één keer te betalen dan kunt u ook een betalingsregeling aanvragen. Vraag gerust!  Mailen kan naar:<a href="mailto:&#98;&#x61;&#x62;&#x73;&#x40;&#x62;&#x61;&#x62;&#x73;&#x62;&#x61;&#108;&#x6c;&#101;&#x74;&#x73;&#x63;&#x68;&#111;&#x6f;&#108;&#x2e;&#x6e;&#108;">&#98;&#x61;&#x62;&#x73;&#x40;&#x62;&#x61;&#x62;&#x73;&#x62;&#x61;&#108;&#x6c;&#101;&#x74;&#x73;&#x63;&#x68;&#111;&#x6f;&#108;&#x2e;&#x6e;&#108;</a> </p>
 </section>
         </main>
         <footer>
