Update from https://github.com/babsballetschool/website/commit/b59574d8933b80dd0fb6f2eb72a9e059a59a29ce

--- a/gallery/Jubileumvoorstelling.html
+++ b/gallery/Jubileumvoorstelling.html
@@ -36,9 +36,9 @@
             <section>
                 <h1>Jubileumvoorstelling</h1>
                 <div class="galleria">
-                    <img src="../resources/image/Jubileumvoorstelling assepoesters (13).jpg" data-title="Assepoesters" data-description=""/>
-                    <img src="../resources/image/Jubileumvoorstelling liefde voor het leven.jpg" data-title="Liefdevoorhetleven" data-description=""/>
-                    <img src="../resources/image/Jubileumvoorstelling zilte zee.jpg" data-title="ZilteZee" data-description=""/>
+                    <img src="../resources/image/algemeen/Jubileumvoorstelling%20assepoesters%20(13).jpg" data-title="Assepoesters" data-description=""/>
+                    <img src="../resources/image/algemeen/Jubileumvoorstelling%20liefde%20voor%20het%20leven.jpg" data-title="Liefdevoorhetleven" data-description=""/>
+                    <img src="../resources/image/algemeen/Jubileumvoorstelling%20zilte%20zee.jpg" data-title="ZilteZee" data-description=""/>
                 </div>
             </section>
         </main>
