Update from https://github.com/babsballetschool/website/commit/31591b88647d443b651d5569899a0081e94d63f4

--- a/fotos.html
+++ b/fotos.html
@@ -39,6 +39,7 @@
 </section><section><h1 id="archief">Archief</h1>
 <p>Wilt u graag nog nagenieten van eerdere voorstellingen en presentaties? dat kan. Bestel nu de DVD of de Foto&#39;s van;</p>
 <ul>
+<li>2023 &#39;Ahoy&#39;</li>
 <li>2019 &#39;Jubileum voorstelling&#39;</li>
 <li>2017 &#39;Diner Dansant&#39;</li>
 <li>2015 &#39;Liefde&#39;</li>
