--- a/wanneer.html
+++ b/wanneer.html
@@ -56,7 +56,7 @@ Opening cultureel seizoen in samenwerking met Theater De KiK en muziekschool All
 <p><strong>Verkleed lessen</strong>             5 t/ 9 februari 2024<br>(Kom verkleed naar de lessen deze week!)</p>
 <p> <strong>Carnavalsvakantie</strong>          12 februari t/m 16 februari 2024<br>(in de vakantie zijn er geen lessen)</p>
 <p><strong>2e Paasdag</strong>                  maandag 1 april 2024<br>(dit is een vrije dag, er zijn geen lessen) </p>
-<p><strong>Meivakantie</strong>                 donderdag 29 april t/m 10 mei 2024<br>(in de vakantie zijn er geen lessen)</p>
+<p><strong>Meivakantie</strong>                  29 april t/m 10 mei 2024<br>(in de vakantie zijn er geen lessen)</p>
 <p><strong>2e Pinksterdag</strong>              maandag 20 mei 2024<br>(dit is een vrije dag, er zijn geen lessen) </p>
 <p><strong>Open Podium</strong>                 25 mei 2024 14:00 
 (Maak je eigen choreo en nodig al je publiek uit om te komen kijken!) </p>
