Update from https://github.com/babsballetschool/website/commit/d3383021294e88e799ad7b7d36df905a859cbe07

--- a/index.html
+++ b/index.html
@@ -33,29 +33,22 @@
         </header>
         <main class="">
             <div class="where"><span>home</span></div>
-            <section><h1 id="start-seizoen-2023-2024">Start seizoen 2023-2024</h1>
-<p><img src="resources/image/algemeen/balletklok.jpg" alt="dansrooster 2023-2024 bij Babs&#39;Balletschool"> 
-Wil je ook lekker dansen? </p>
+            <section><h1 id="gelukkig-nieuwjaar-en-een-dansant-2024dansrooster-2023-2024-bij-babsballetschool">Gelukkig nieuwjaar en een dansant 2024!<img src="resources/image/algemeen/newyear.jpg" alt="dansrooster 2023-2024 bij Babs&#39;Balletschool"></h1>
+<p>Voor iedereen een sprankelend, gezond en dansant 2024 gewenst! 
+Vanaf 8 januari 2024 gaan we weer verder met ons dansseizoen. 
+Instromen is zeker mogelijk.</p>
+</section><section><h1 id="dansrooster--jaarplanning">Dansrooster &amp; jaarplanning:</h1>
+<p><img src="resources/image/algemeen/balletklok.jpg" alt="dansrooster 2023-2024 bij Babs&#39;Balletschool"> </p>
 <p><a href="https://docs.google.com/forms/d/e/1FAIpQLScKKMDE3qj1KcmIxWGIdN7Re943kAck9iCVdcWpYOsYjp8lLA/viewform?usp=sf_link">Inschrijfformulier</a></p>
 <p>of vraag een proefles aan</p>
 <p><a href="https://www.babsballetschool.nl/wanneer.html">Rooster 2023-2024</a></p>
-</section><section><h1 id="dance-battle--workshops">Dance Battle &amp; workshops</h1>
-<p><img src="resources/image/algemeen/Dancebattle%202023.jpg" alt="Dance Battle bij Theater de KiK "> 
-<strong>27 oktober t/m 1 december</strong> kun je mee doen met dansworkshops voor jongerenen. (12 tot 18 jaar)</p>
-<p>vrijdag avond</p>
-<p>19:00 - 20:15 Ballet / Jazz moves / Moderne dans </p>
-<p>20:30 - 21:45 uur Streetdance / Hiphop / Urban Dance </p>
-<p>De jongeren die meedoen aan de workshops mogen ook optreden tijdens de finale-avond van de Dancebattle op <strong>vrijdag 1 december</strong>
-Tijdens de finale-avond is er een vak- en publieksjury aanwezig die de winnaars kiezen, er zijn diverse prijzen te winnen </p>
-<p>Als je in Overbetuwe woont of op school zit kun je je aanmelden voor de workshops via <a href="http://www.theaterdekik.nl">www.theaterdekik.nl</a> </p>
-</section><section><h1 id="kijk-lessen">Kijk lessen</h1>
-<p><img src="resources/image/algemeen/opendag%209-12-09%20023.JPG" alt="Kijk lessen Babs&#39;Balletschool"> 
-in de week van 20 t/m 24 november 2023 zijn er weer Kijk-lessen. 
-Ouders/ familie zijn dan van harte welkom om tijdens de les naar de vorderingen te komen kijken. </p>
-</section><section><h1 id="presentaties-2023-2024">Presentaties 2023-2024</h1>
-<p><img src="resources/image/algemeen/snowflakes-ballerina.jpg" alt="Presentaties Babs&#39;Balletschool"> 
-In het nieuwe dansseizoen staan natuurlijk de lessen weer centraal maar organiseren we ook diverse presentaties. Op <strong>zaterdag 16 december</strong> presenteren we een mini voorstelling WINTER in Theater de KiK 14:00 &amp; 15:30  en op <strong>25 mei 2024</strong> een Open Podium waar leerlingen hun eigen werk kunnen tonen. 
-Kom kijken of meedoen en zet alle data alvast in de agenda! </p>
+</section><section><h1 id="carnaval">Carnaval</h1>
+<p>in de week van 5 t/m 9 februari mogen alle leerlingen verkleed naar hun lessen komen. 
+van <strong>12 t/m 16 februari is het Carnavalsvakantie</strong> en zijn dan er geen lessen. 
+we wensen iedereen veel leut toe.</p>
+</section><section><h1 id="open-podium">Open Podium</h1>
+<p><strong>zaterdag 25 mei 14:00</strong> is weer ons Open Podium in theater De KiK. Alle leerlingen mogen zich hiervoor aanmelden. 
+Bedenk zelf een dansje, bedenk een choreografie voor iemand anders of met een groep, laat je creativiteit de vrije loop en kom stralen op het podium! </p>
 </section><section><h1 id="ballet-spelletje-balletris">Ballet Spelletje Balletris</h1>
 <p><img src="resources/image/balletris/babsballetschool-logo.gif" alt="dansplezier bij Babs&#39;Balletschool"> 
  Typ deze code in op je toetsenbord:  ⬆⬆⬇⬇⬅➡⬅➡ ba    </p>
