Update from https://github.com/babsballetschool/website/commit/81878cbbab9bab2784965fbe649aa1b66117b4b6

--- a/jazz.html
+++ b/jazz.html
@@ -36,7 +36,7 @@
             <section><h1 id="jazz-ballet">Jazz ballet</h1>
 <p><img src="resources/image/8.jpg.png" alt="Jazz ballet bij Babs&#39;Balletschool"> </p>
 <p><strong>Jazzballet Volwassenen:</strong>  op maandagavond danst een groep volwassenen met Daphne. Door diverse danscominaties wordt er gewerkt aan houding,techniek en conditie en is het ook een swingende les. Instromen is zeker nog mogelijk. </p>
-<p><strong>Jazzballet Kids</strong> De Jazzballet les is op maandag middag vanaf 10 jaar en donderdag middag vanaf 12 jaar, voor kids die niet kunnen stil zitten! De docenten gaan aan de slag met techniek en danscombinaties zodat de kids zich kunnen uitleven in dans. </p>
+<p><strong>Jazzballet Kids</strong> De Jazzballet lessen zijn op maandag middag voor 9+  en donderdag middag voor 14+, voor kids die niet kunnen stil zitten! De docenten gaan aan de slag met techniek en danscombinaties zodat de kids zich kunnen uitleven in dans. </p>
 </section>
         </main>
         <footer>
