Update from https://github.com/babsballetschool/website/commit/1e3273977e4f881f3ed38bc7ddb1f1545833cbee

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@ Instromen is zeker mogelijk.</p>
 </section><section><h1 id="dansrooster--jaarplanning">Dansrooster &amp; jaarplanning:</h1>
 <p><img src="resources/image/algemeen/balletklok.jpg" alt="dansrooster 2023-2024 bij Babs&#39;Balletschool"> </p>
 <p><a href="https://docs.google.com/forms/d/e/1FAIpQLScKKMDE3qj1KcmIxWGIdN7Re943kAck9iCVdcWpYOsYjp8lLA/viewform?usp=sf_link">Inschrijfformulier</a></p>
-<p>of vraag een proefles aan</p>
+<p>of vraag een proefles aan <a href="mailto:babs@babsballetschool.nl">contact</a></p>
 <p><a href="https://www.babsballetschool.nl/wanneer.html">Rooster 2023-2024</a></p>
 </section><section><h1 id="carnaval">Carnaval</h1>
 <p>in de week van 5 t/m 9 februari mogen alle leerlingen verkleed naar hun lessen komen. 
