Update from https://github.com/babsballetschool/website/commit/610cd7cb7f71c1caa036b233e43659eb76b8da6f

--- a/index.html
+++ b/index.html
@@ -43,11 +43,13 @@ Instromen is zeker mogelijk.</p>
 <p>of vraag een proefles aan <a href="mailto:babs@babsballetschool.nl">contact</a></p>
 <p><a href="https://www.babsballetschool.nl/wanneer.html">Rooster 2023-2024</a></p>
 </section><section><h1 id="carnaval">Carnaval</h1>
-<p>in de week van 5 t/m 9 februari mogen alle leerlingen verkleed naar hun lessen komen. 
+<p><img src="resources/image/algemeen/Carnaval.JPG" alt="Carnaval 2023-2024 bij Babs&#39;Balletschool"> 
+in de week van 5 t/m 9 februari mogen alle leerlingen verkleed naar hun lessen komen. 
 van <strong>12 t/m 16 februari is het Carnavalsvakantie</strong> en zijn dan er geen lessen. 
 we wensen iedereen veel leut toe.</p>
 </section><section><h1 id="open-podium">Open Podium</h1>
-<p><strong>zaterdag 25 mei 14:00</strong> is weer ons Open Podium in theater De KiK. Alle leerlingen mogen zich hiervoor aanmelden. 
+<p><img src="resources/image/algemeen/OpeningKultuurklupStage.JPG" alt="Open Podium 2023-2024 bij Babs&#39;Balletschool"> 
+<strong>zaterdag 25 mei 14:00</strong> is weer ons Open Podium in theater De KiK. Alle leerlingen mogen zich hiervoor aanmelden. 
 Bedenk zelf een dansje, bedenk een choreografie voor iemand anders of met een groep, laat je creativiteit de vrije loop en kom stralen op het podium! </p>
 </section><section><h1 id="ballet-spelletje-balletris">Ballet Spelletje Balletris</h1>
 <p><img src="resources/image/balletris/babsballetschool-logo.gif" alt="dansplezier bij Babs&#39;Balletschool"> 
