Update from https://github.com/babsballetschool/website/commit/8a8727f49d140fa4ae657c416ddd43dfb0ed21b5

--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@ Instromen is zeker mogelijk.</p>
 <p><a href="https://www.babsballetschool.nl/wanneer.html">Rooster 2023-2024</a></p>
 </section><section><h1 id="carnaval">Carnaval</h1>
 <p><img src="resources/image/algemeen/Carnaval.JPG" alt="Carnaval 2023-2024 bij Babs&#39;Balletschool"> 
-in de week van 5 t/m 9 februari mogen alle leerlingen verkleed naar hun lessen komen. 
-van <strong>12 t/m 16 februari is het Carnavalsvakantie</strong> en zijn dan er geen lessen. 
-we wensen iedereen veel leut toe.</p>
+in de week van 5 t/m 9 februari mogen alle leerlingen verkleed naar hun lessen komen. </p>
+<p>van <strong>12 t/m 16 februari is het Carnavalsvakantie</strong> en zijn dan er geen lessen. </p>
+<p>we wensen iedereen veel leut toe.</p>
 </section><section><h1 id="open-podium">Open Podium</h1>
 <p><img src="resources/image/algemeen/OpeningKultuurklupStage.JPG" alt="Open Podium 2023-2024 bij Babs&#39;Balletschool"> 
 <strong>zaterdag 25 mei 14:00</strong> is weer ons Open Podium in theater De KiK. Alle leerlingen mogen zich hiervoor aanmelden. 
