--- a/kleding.html
+++ b/kleding.html
@@ -139,7 +139,7 @@
 <p>*evt. personalized met je eigen naam voor €2,50 extra.</p>
 <p>evt is ook te bestellen; cropped shirts/legging/ tshirt lange mouw.</p>
 <p>te bestellen in zwart in diverse maten.
-bestel via <a href="mailto:&#x62;&#97;&#x62;&#115;&#64;&#98;&#x61;&#x62;&#115;&#98;&#97;&#108;&#x6c;&#x65;&#116;&#115;&#x63;&#104;&#111;&#111;&#108;&#46;&#110;&#x6c;">&#x62;&#97;&#x62;&#115;&#64;&#98;&#x61;&#x62;&#115;&#98;&#97;&#108;&#x6c;&#x65;&#116;&#115;&#x63;&#104;&#111;&#111;&#108;&#46;&#110;&#x6c;</a> </p>
+bestel via <a href="mailto:&#98;&#x61;&#x62;&#115;&#64;&#x62;&#x61;&#x62;&#x73;&#x62;&#x61;&#x6c;&#108;&#x65;&#x74;&#x73;&#x63;&#x68;&#x6f;&#x6f;&#108;&#46;&#x6e;&#108;">&#98;&#x61;&#x62;&#115;&#64;&#x62;&#x61;&#x62;&#x73;&#x62;&#x61;&#x6c;&#108;&#x65;&#x74;&#x73;&#x63;&#x68;&#x6f;&#x6f;&#108;&#46;&#x6e;&#108;</a> </p>
 </section><section><h1 id="hoe-maak-ik-een-balletknotje">Hoe maak ik een balletknotje</h1>
 <img class="inline" src="resources/image/algemeen/knotje%20maken%202jpg.jpg" alt="Kledingvoorschrift Babs Balletschool">
 
