Update from https://github.com/babsballetschool/website/commit/8101e009d5ca16fc1bc15ac131492ffbc937f798

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ in de week van 5 t/m 9 februari mogen alle leerlingen verkleed naar hun lessen k
 </section><section><h1 id="open-podium">Open Podium</h1>
 <p><img src="resources/image/openingkultuurklup/OpeningKultuurklupStage.JPG" alt="Open Podium 2023-2024 bij Babs&#39;Balletschool"> 
 <strong>zaterdag 25 mei 14:00</strong> is weer ons Open Podium in theater De KiK. Alle leerlingen mogen zich hiervoor aanmelden. 
-Bedenk zelf een dansje, bedenk een choreografie voor iemand anders of met een groep, laat je creativiteit de vrije loop en kom stralen op het podium! </p>
+Bedenk voor jezelf een dansje, bedenk een choreografie voor iemand anders of met een groep, laat je creativiteit de vrije loop en kom stralen op het podium! </p>
 </section><section><h1 id="ballet-spelletje-balletris">Ballet Spelletje Balletris</h1>
 <p><img src="resources/image/balletris/babsballetschool-logo.gif" alt="dansplezier bij Babs&#39;Balletschool"> 
  Typ deze code in op je toetsenbord:  ⬆⬆⬇⬇⬅➡⬅➡ ba    </p>
