--- a/wanneer.html
+++ b/wanneer.html
@@ -54,7 +54,9 @@ Opening cultureel seizoen in samenwerking met Theater De KiK en muziekschool All
 (enkele groepen zullen optredens verzorgen) </p>
 <p><strong>Kerstvakantie</strong>               25 december 2023 t/m 5 januari 2024<br>(in de vakantie zijn er geen lessen)</p>
 <p><strong>Verkleed lessen</strong>             5 t/ 9 februari 2024<br>(Kom verkleed naar de lessen deze week!)</p>
-<p> <strong>Carnavalsvakantie</strong>          12 februari t/m 16 februari 2024<br>(in de vakantie zijn er geen lessen)</p>
+<p><strong>Carnavalsvakantie</strong>          12 februari t/m 16 februari 2024<br>(in de vakantie zijn er geen lessen)</p>
+<p><strong>Vriendenlessen</strong>             19 t/m 23 februari 2024
+leerlingen mogen een vriend(in) meenemen naar de les om hen te laten ervaren hoe leuk dansen is! </p>
 <p><strong>2e Paasdag</strong>                  maandag 1 april 2024<br>(dit is een vrije dag, er zijn geen lessen) </p>
 <p><strong>Meivakantie</strong>                  29 april t/m 10 mei 2024<br>(in de vakantie zijn er geen lessen)</p>
 <p><strong>2e Pinksterdag</strong>              maandag 20 mei 2024<br>(dit is een vrije dag, er zijn geen lessen) </p>
