--- a/index.html
+++ b/index.html
@@ -33,26 +33,23 @@
         </header>
         <main class="">
             <div class="where"><span>home</span></div>
-            <section><h1 id="gelukkig-nieuwjaar-en-een-dansant-2024dansrooster-2023-2024-bij-babsballetschool">Gelukkig nieuwjaar en een dansant 2024!<img src="resources/image/algemeen/newyear.jpg" alt="dansrooster 2023-2024 bij Babs&#39;Balletschool"></h1>
-<p>Voor iedereen een sprankelend, gezond en dansant 2024 gewenst! 
-Vanaf 8 januari 2024 gaan we weer verder met ons dansseizoen. 
-Instromen is zeker mogelijk.</p>
-</section><section><h1 id="dansrooster--jaarplanning">Dansrooster &amp; jaarplanning:</h1>
-<p><img src="resources/image/algemeen/balletklok.jpg" alt="dansrooster 2023-2024 bij Babs&#39;Balletschool"> </p>
-<p><a href="https://docs.google.com/forms/d/e/1FAIpQLScKKMDE3qj1KcmIxWGIdN7Re943kAck9iCVdcWpYOsYjp8lLA/viewform?usp=sf_link">Inschrijfformulier</a></p>
-<p>of vraag een proefles aan <a href="mailto:babs@babsballetschool.nl">contact</a></p>
-<p><a href="https://www.babsballetschool.nl/wanneer.html">Rooster 2023-2024</a></p>
-</section><section><h1 id="carnaval">Carnaval</h1>
-<p><img src="resources/image/algemeen/Carnaval.JPG" alt="Carnaval 2023-2024 bij Babs&#39;Balletschool"> 
-in de week van 5 t/m 9 februari mogen alle leerlingen verkleed naar hun lessen komen. </p>
-<p>van <strong>12 t/m 16 februari is het Carnavalsvakantie</strong> en zijn dan er geen lessen. </p>
-<p>we wensen iedereen veel leut toe.</p>
+            <section><h1 id="dans-plezier">Dans plezier</h1>
+<p>Plezier in dansen is er voor groot en klein <a href="resources/image/algemeen/Ballettieners2.JPG">dansplezier bij Babs Balletschool</a> 
+Wil je dit zelf ervaren? Instromen is in de meeste groepen nog mogelijk. Neem even contact op voor een vrijblijvende proefles <a href="mailto:babs@babsballetschool.nl">contact</a></p>
+<h1 id="dansrooster--jaarplanning">Dansrooster &amp; jaarplanning:</h1>
+<p><img src="resources/image/algemeen/balletklok.jpg" alt="dansrooster 2023-2024 bij Babs Balletschool"> 
+<a href="https://www.babsballetschool.nl/wanneer.html">Rooster 2023-2024</a>
+<a href="https://docs.google.com/forms/d/e/1FAIpQLScKKMDE3qj1KcmIxWGIdN7Re943kAck9iCVdcWpYOsYjp8lLA/viewform?usp=sf_link">Inschrijfformulier</a></p>
+</section><section><h1 id="pasen">Pasen</h1>
+<p><img src="resources/image/algemeen/ballet_bunny.jpg" alt="vakantie bij Babs Balletschool"> 
+Op maandag 1 april is het 2e Paasdag, er zijn dan geen lessen. 
+( dit is geen grapje;-)) </p>
 </section><section><h1 id="open-podium">Open Podium</h1>
-<p><img src="resources/image/openingkultuurklup/OpeningKultuurklupStage.JPG" alt="Open Podium 2023-2024 bij Babs&#39;Balletschool"> 
+<p><img src="resources/image/openingkultuurklup/OpeningKultuurklupStage.JPG" alt="Open Podium 2023-2024 bij Babs Balletschool"> 
 <strong>zaterdag 25 mei 14:00</strong> is weer ons Open Podium in theater De KiK. Alle leerlingen mogen zich hiervoor aanmelden. 
 Bedenk voor jezelf een dansje, bedenk een choreografie voor iemand anders of met een groep, laat je creativiteit de vrije loop en kom stralen op het podium! </p>
 </section><section><h1 id="ballet-spelletje-balletris">Ballet Spelletje Balletris</h1>
-<p><img src="resources/image/balletris/babsballetschool-logo.gif" alt="dansplezier bij Babs&#39;Balletschool"> 
+<p><img src="resources/image/balletris/babsballetschool-logo.gif" alt="dansplezier bij Babs Balletschool"> 
  Typ deze code in op je toetsenbord:  ⬆⬆⬇⬇⬅➡⬅➡ ba    </p>
 </section>
         </main>
