Update from https://github.com/babsballetschool/website/commit/37a3b3d460483ff87444bf83cefce99925415e12

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ Wil je dit zelf ervaren? Instromen is in de meeste groepen nog mogelijk. Neem ev
 <a href="https://www.babsballetschool.nl/wanneer.html">Rooster 2023-2024</a>
 <a href="https://docs.google.com/forms/d/e/1FAIpQLScKKMDE3qj1KcmIxWGIdN7Re943kAck9iCVdcWpYOsYjp8lLA/viewform?usp=sf_link">Inschrijfformulier</a></p>
 </section><section><h1 id="pasen">Pasen</h1>
-<p><img src="resources/image/ballet_bunny.jpg" alt="vakantie bij Babs Balletschool"> 
+<p><img src="resources/image/ballet_bunny2.png" alt="vakantie bij Babs Balletschool"> 
 Op maandag 1 april is het 2e Paasdag, er zijn dan geen lessen. 
 ( dit is geen grapje;-)) </p>
 </section><section><h1 id="open-podium">Open Podium</h1>
