--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <section><h1 id="dans-plezier">Dans plezier</h1>
 <p>Plezier in dansen is er voor groot en klein <a href="resources/image/algemeen/Ballettieners2.JPG">dansplezier bij Babs Balletschool</a> 
 Wil je dit zelf ervaren? Instromen is in de meeste groepen nog mogelijk. Neem even contact op voor een vrijblijvende proefles <a href="mailto:babs@babsballetschool.nl">contact</a></p>
-<h1 id="dansrooster--jaarplanning">Dansrooster &amp; jaarplanning:</h1>
+</section><section><h1 id="dansrooster--jaarplanning">Dansrooster &amp; jaarplanning:</h1>
 <p><img src="resources/image/algemeen/balletklok.jpg" alt="dansrooster 2023-2024 bij Babs Balletschool"> 
 <a href="https://www.babsballetschool.nl/wanneer.html">Rooster 2023-2024</a>
 <a href="https://docs.google.com/forms/d/e/1FAIpQLScKKMDE3qj1KcmIxWGIdN7Re943kAck9iCVdcWpYOsYjp8lLA/viewform?usp=sf_link">Inschrijfformulier</a></p>
