--- a/fotos.html
+++ b/fotos.html
@@ -51,18 +51,14 @@
 <p>Mail u wens voor een dvd door naar <a href="mailto:babs@babsballetschool.nl">Babs</a>.</p>
 </section><section><h1 id="overzicht-fotos-van-2008-tot-nu">Overzicht foto&#39;s van 2008 tot nu:</h1>
 <ul>
-<li><p><a href="gallery/zomervlucht.html">Zomervlucht; voorstelling 2009</a></p>
-</li>
-<li><p><a href="gallery/er_was_eens.html">Er was eens...; voorstelling 2011</a></p>
-</li>
-<li><p><a href="gallery/cinemadans.html">Cinemadans; voorstelling 2013</a></p>
-</li>
-<li><p><a href="gallery/liefde.html">Liefde; voorstelling 2015</a></p>
-</li>
-<li><p><a href="gallery/diner_dansant.html">Diner Dansant; voorstelling 2017</a></p>
-</li>
-<li></li>
+<li><a href="gallery/zomervlucht.html">Zomervlucht; voorstelling 2009</a></li>
+<li><a href="gallery/er_was_eens.html">Er was eens...; voorstelling 2011</a></li>
+<li><a href="gallery/cinemadans.html">Cinemadans; voorstelling 2013</a></li>
+<li><a href="gallery/liefde.html">Liefde; voorstelling 2015</a></li>
+<li><a href="gallery/diner_dansant.html">Diner Dansant; voorstelling 2017</a></li>
 </ul>
+<p>*<a href="resources/image/algemeen/Jubileumvoorstelling%20liefde%20voor%20het%20leven.jpg">Jubileum voorstelling 2019</a> 
+*<a href="resources/image/algemeen/Jungle-27.jpg">Ahoy 2023</a> </p>
 </section>
         </main>
         <footer>
