--- a/fotos.html
+++ b/fotos.html
@@ -57,8 +57,8 @@
 <li><a href="gallery/liefde.html">Liefde; voorstelling 2015</a></li>
 <li><a href="gallery/diner_dansant.html">Diner Dansant; voorstelling 2017</a></li>
 </ul>
-<p>*<a href="resources/image/algemeen/Jubileumvoorstelling%20liefde%20voor%20het%20leven.jpg">Jubileum voorstelling 2019</a> 
-*<a href="resources/image/algemeen/Jungle-27.jpg">Ahoy 2023</a> </p>
+<p>*<a href="resources/image/algemeen/Jubileumvoorstelling%20liefde%20voor%20het%20leven.jpg">Jubileum voorstelling 2019</a></p>
+<p>*<a href="resources/image/algemeen/Jungle-27.jpg">Ahoy 2023</a> </p>
 </section>
         </main>
         <footer>
