--- a/index.html
+++ b/index.html
@@ -40,14 +40,20 @@ Wil je dit zelf ervaren? Instromen is in de meeste groepen nog mogelijk. Neem ev
 <p><img src="resources/image/algemeen/balletklok.jpg" alt="dansrooster 2023-2024 bij Babs Balletschool"> 
 <a href="https://www.babsballetschool.nl/wanneer.html">Rooster 2023-2024</a>
 <a href="https://docs.google.com/forms/d/e/1FAIpQLScKKMDE3qj1KcmIxWGIdN7Re943kAck9iCVdcWpYOsYjp8lLA/viewform?usp=sf_link">Inschrijfformulier</a></p>
-</section><section><h1 id="pasen">Pasen</h1>
-<p><img src="resources/image/ballet_bunny2.png" alt="vakantie bij Babs Balletschool"> 
-Op maandag 1 april is het 2e Paasdag, er zijn dan geen lessen. 
-( dit is geen grapje;-)) </p>
 </section><section><h1 id="open-podium">Open Podium</h1>
 <p><img src="resources/image/openingkultuurklup/OpeningKultuurklupStage.JPG" alt="Open Podium 2023-2024 bij Babs Balletschool"> 
 <strong>zaterdag 25 mei 14:00</strong> is weer ons Open Podium in theater De KiK. Alle leerlingen mogen zich hiervoor aanmelden. 
-Bedenk voor jezelf een dansje, bedenk een choreografie voor iemand anders of met een groep, laat je creativiteit de vrije loop en kom stralen op het podium! </p>
+Bedenk voor jezelf een dansje, bedenk een choreografie voor iemand anders of met een groep, laat je creativiteit de vrije loop en kom stralen op het podium! 
+Op 26 april is de repetitie voor alle deelnemers.
+<strong>Aanmelden kan nog tot 20 april!</strong></p>
+</section><section><h1 id="floor-of-fame">Floor of Fame</h1>
+<p><img src="resources/image/floor-of-fame.jpg" alt="Floor of Fame Babs Balletschool"> 
+In de Mei-vakantie ga ik onze nieuwe vloer leggen en daaroverheen een professionele balletvloer. Een lang gekoesterde droom. Dit kon ik niet helemaal alleen en gelukkig kreeg ik hulp van de sponsor &#39;Go Cyber Safe&#39;
+Bij de leerlingen is het idee ontstaan van een &#39;Floor of Fame&#39; als je het leuk vindt om ook een steentje bij te dragen kun je een plank adopteren voor €5,- waar je je naam/(hand)tekening/tekst op kan schrijven, zo kunnen we vele jaren later nog terug vinden wie er allemaal op de
+vloer hebben gedanst. Een super lief idee en als je mee wilt doen mag je dat laten weten aan mij.</p>
+</section><section><h1 id="mei-vakantie">Mei-vakantie</h1>
+<p><img src="resources/image/algemeen/hemelvaartsvakantie.jpg" alt="Mei-vakantie bij Babs Balletschool"> 
+van 29 april t/m 10 mei is het Mei-vakantie, er zijn dan geen lessen. Na de Mei-vakantie zien we de leerlingen graag weer terug op onze nieuwe vloer! </p>
 </section><section><h1 id="ballet-spelletje-balletris">Ballet Spelletje Balletris</h1>
 <p><img src="resources/image/balletris/babsballetschool-logo.gif" alt="dansplezier bij Babs Balletschool"> 
  Typ deze code in op je toetsenbord:  ⬆⬆⬇⬇⬅➡⬅➡ ba    </p>
