Update from https://github.com/babsballetschool/website/commit/25750e8a095cfae87a9b85f25237097ac9d5b296

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <main class="">
             <div class="where"><span>home</span></div>
             <section><h1 id="dans-plezier">Dans plezier</h1>
-<p>Plezier in dansen is er voor groot en klein <img src="resources/image/algemeen/Ballettieners2.JPG" alt="dansplezier bij Babs Balletschool"> 
+<p>Plezier in dansen is er voor groot en klein. <img src="resources/image/algemeen/Ballettieners2.JPG" alt="dansplezier bij Babs Balletschool"> 
 Wil je dit zelf ervaren? Instromen is in de meeste groepen nog mogelijk. Neem even contact op voor een vrijblijvende proefles <a href="mailto:babs@babsballetschool.nl">contact</a></p>
 </section><section><h1 id="dansrooster--jaarplanning">Dansrooster &amp; jaarplanning:</h1>
 <p><img src="resources/image/algemeen/balletklok.jpg" alt="dansrooster 2023-2024 bij Babs Balletschool"> 
