Update from https://github.com/babsballetschool/website/commit/2ccb244968f3a5f7670d21664c2c37daa63f0ec3

--- a/index.html
+++ b/index.html
@@ -35,10 +35,11 @@
             <div class="where"><span>home</span></div>
             <section><h1 id="dans-plezier">Dans plezier</h1>
 <p>Plezier in dansen is er voor groot en klein. <img src="resources/image/algemeen/kinderballet%20(2).JPG" alt="dansplezier bij Babs Balletschool"> 
-Wil je dit zelf ervaren? Instromen is in de meeste groepen nog mogelijk. Neem even contact op voor een vrijblijvende proefles <a href="mailto:babs@babsballetschool.nl">contact</a></p>
+Wil je dit zelf ervaren? Instromen is in de meeste groepen nog mogelijk. Stuur een mail voor het aanvragen van een vrijblijvende proefles <a href="mailto:babs@babsballetschool.nl">contact</a></p>
 </section><section><h1 id="dansrooster--jaarplanning">Dansrooster &amp; jaarplanning:</h1>
 <p><img src="resources/image/algemeen/balletklok.jpg" alt="dansrooster 2023-2024 bij Babs Balletschool"> 
 <a href="https://www.babsballetschool.nl/wanneer.html">Rooster 2023-2024</a>
+aanmelden voor dit seizoen? 
 <a href="https://docs.google.com/forms/d/e/1FAIpQLScKKMDE3qj1KcmIxWGIdN7Re943kAck9iCVdcWpYOsYjp8lLA/viewform?usp=sf_link">Inschrijfformulier</a></p>
 </section><section><h1 id="open-podium">Open Podium</h1>
 <p><img src="resources/image/openingkultuurklup/OpeningKultuurklupStage.JPG" alt="Open Podium 2023-2024 bij Babs Balletschool"> 
