--- a/index.html
+++ b/index.html
@@ -43,10 +43,10 @@ aanmelden voor dit seizoen?
 <a href="https://docs.google.com/forms/d/e/1FAIpQLScKKMDE3qj1KcmIxWGIdN7Re943kAck9iCVdcWpYOsYjp8lLA/viewform?usp=sf_link">Inschrijfformulier</a></p>
 </section><section><h1 id="open-podium">Open Podium</h1>
 <p><img src="resources/image/openingkultuurklup/OpeningKultuurklupStage.JPG" alt="Open Podium 2023-2024 bij Babs Balletschool"> 
-<strong>zaterdag 25 mei 14:00</strong> is weer ons Open Podium in theater De KiK. Alle leerlingen mogen zich hiervoor aanmelden. 
-Bedenk voor jezelf een dansje, bedenk een choreografie voor iemand anders of met een groep, laat je creativiteit de vrije loop en kom stralen op het podium! 
-Op 26 april is de repetitie voor alle deelnemers.
-<strong>Aanmelden kan nog tot 20 april!</strong></p>
+**zaterdag 25 mei 14:00 &amp; 15:30 ** is weer ons Open Podium in theater De KiK. 
+Er zijn heel veel aanmeldingen binnegekomen en we verheugen ons op alle creatieve dansen. 
+Er zijn 2 presentaties dus let even op wanneer jouw danser danst! 
+Kaarten zijn vanaf 1 mei te koop via <a href="https://theaterdekik.nl/">https://theaterdekik.nl/</a></p>
 </section><section><h1 id="floor-of-fame">Floor of Fame</h1>
 <p><img src="resources/image/algemeen/floor-of-fame.jpg" alt="Floor of Fame Babs Balletschool"> 
 In de Mei-vakantie ga ik onze nieuwe vloer leggen en daaroverheen een professionele balletvloer. Een lang gekoesterde droom. Dit kon ik niet helemaal alleen en gelukkig kreeg ik hulp van de sponsor &#39;Go Cyber Safe&#39;.
