Update from https://github.com/babsballetschool/website/commit/51e46c07a60af10d6cc8c480483d01425fca26a0

--- a/index.html
+++ b/index.html
@@ -44,17 +44,16 @@ aanmelden voor dit seizoen?
 </section><section><h1 id="open-podium">Open Podium</h1>
 <p><img src="resources/image/openingkultuurklup/OpeningKultuurklupStage.JPG" alt="Open Podium 2023-2024 bij Babs Balletschool"> 
 **zaterdag 25 mei 14:00 &amp; 15:30 ** is weer ons Open Podium in theater De KiK. 
-Er zijn heel veel aanmeldingen binnegekomen en we verheugen ons op alle creatieve dansen. 
-Er zijn 2 presentaties dus let even op wanneer jouw danser danst! 
-Kaarten zijn vanaf 1 mei te koop via <a href="https://theaterdekik.nl/">https://theaterdekik.nl/</a></p>
+We verheugen ons op alle creatieve dansen. 
+Er zijn 2 presentaties om 14:00 &amp; om 15:30 dus let even op wanneer jouw danser danst! 
+Kaarten zijn nog te koop via <a href="https://theaterdekik.nl/">https://theaterdekik.nl/</a></p>
 </section><section><h1 id="floor-of-fame">Floor of Fame</h1>
-<p><img src="resources/image/algemeen/floor-of-fame.jpg" alt="Floor of Fame Babs Balletschool"> 
-In de Mei-vakantie ga ik onze nieuwe vloer leggen en daaroverheen een professionele balletvloer. Een lang gekoesterde droom. Dit kon ik niet helemaal alleen en gelukkig kreeg ik hulp van de sponsor &#39;Go Cyber Safe&#39;.
-Bij de leerlingen is het idee ontstaan van een &#39;Floor of Fame&#39;, als je het leuk vindt om ook een steentje bij te dragen kun je een plank adopteren voor €5,- waar je je naam/(hand)tekening/tekst op kan schrijven, zo kunnen we vele jaren later nog terug vinden wie er allemaal op de
-vloer hebben gedanst. Een super lief idee en als je mee wilt doen mag je dat laten weten aan mij.</p>
-</section><section><h1 id="mei-vakantie">Mei-vakantie</h1>
-<p><img src="resources/image/algemeen/hemelvaartsvakantie.jpg" alt="Mei-vakantie bij Babs Balletschool"> 
-van 29 april t/m 10 mei is het Mei-vakantie, er zijn dan geen lessen. Na de Mei-vakantie zien we de leerlingen graag weer terug op onze nieuwe vloer! </p>
+<p><img src="resources/image/algemeen/floor-of-fame-foto.jpg" alt="Floor of Fame Babs Balletschool"> 
+Met dank aan alle lieve dansers, fans en sponsor! </p>
+</section><section><h1 id="peuterdans">Peuterdans</h1>
+<p><img src="resources/image/algemeen/peuterdans%20(2).jpg" alt="Peuterdans bij Babs Balletschool"> 
+Op de maandagen 27 mei t/m 24 juni om 10:45 is er nog plek bij de mini cursus Peuterdans. Kom je ook graag dansen met je kleintje (2-4)?
+stuur een mail voor een proefles. <a href="mailto:babs@babsballetschool.nl">contact</a></p>
 </section><section><h1 id="ballet-spelletje-balletris">Ballet Spelletje Balletris</h1>
 <p><img src="resources/image/balletris/babsballetschool-logo.gif" alt="dansplezier bij Babs Balletschool"> 
  Typ deze code in op je toetsenbord:  ⬆⬆⬇⬇⬅➡⬅➡ ba    </p>
