Update from https://github.com/babsballetschool/website/commit/e17ba67a4bd66ba340d051faff4c4583339bd2c4

--- a/index.html
+++ b/index.html
@@ -35,23 +35,20 @@
             <div class="where"><span>home</span></div>
             <section><h1 id="dans-plezier">Dans plezier</h1>
 <p>Plezier in dansen is er voor groot en klein. <img src="resources/image/algemeen/kinderballet%20(2).JPG" alt="dansplezier bij Babs Balletschool"> 
-Wil je dit zelf ervaren? Instromen is in de meeste groepen nog mogelijk. Stuur een mail voor het aanvragen van een vrijblijvende proefles <a href="mailto:babs@babsballetschool.nl">contact</a></p>
+Wil je dit zelf ervaren? Van 24 t/m 27 juni is er een orientatie week waar je vrijblijvend proeflessen mag komen doen. Stuur een mail voor het aanvragen van een proefles <a href="mailto:babs@babsballetschool.nl">contact</a></p>
 </section><section><h1 id="dansrooster--jaarplanning">Dansrooster &amp; jaarplanning</h1>
 <p><img src="resources/image/algemeen/balletklok.jpg" alt="dansrooster 2023-2024 bij Babs Balletschool"> 
 <a href="https://www.babsballetschool.nl/wanneer.html">Rooster 2023-2024</a>
 aanmelden voor dit seizoen? 
 <a href="https://docs.google.com/forms/d/e/1FAIpQLScKKMDE3qj1KcmIxWGIdN7Re943kAck9iCVdcWpYOsYjp8lLA/viewform?usp=sf_link">Inschrijfformulier</a></p>
-</section><section><h1 id="floor-of-fame">Floor of Fame</h1>
-<p><img src="resources/image/algemeen/floor-of-fame-foto.jpg" alt="Floor of Fame Babs Balletschool"> 
-Met dank aan alle lieve dansers, fans en sponsor! </p>
-</section><section><h1 id="peuterdans">Peuterdans</h1>
-<p><img src="resources/image/algemeen/peuterdans%20(2).jpg" alt="Peuterdans bij Babs Balletschool"> 
-Op de maandagen 27 mei t/m 24 juni om 10:45 is er nog plek bij de mini cursus Peuterdans. Kom je ook graag dansen met je kleintje (2-4)?
-stuur een mail voor een proefles. <a href="mailto:babs@babsballetschool.nl">contact</a></p>
 </section><section><h1 id="ballet-spelletje-balletris">Ballet Spelletje Balletris</h1>
 <p><img src="resources/image/balletris/babsballetschool-logo.gif" alt="dansplezier bij Babs Balletschool"> 
  Typ deze code in op je toetsenbord:  ⬆⬆⬇⬇⬅➡⬅➡ ba    </p>
-</section>
+</section><section><h1 id="floor-of-fame">Floor of Fame</h1>
+<p><img src="resources/image/algemeen/floor-of-fame-foto.jpg" alt="Floor of Fame Babs Balletschool"> 
+Onze vloer is een feit met dank aan alle lieve dansers, fans en de sponsor Go Cybersafe.
+templates/resources/image/algemeen/Logo-go-cybersafe.png</p>
+</section><section></section>
         </main>
         <footer>
             <nav>
