Update from https://github.com/babsballetschool/website/commit/59d1a1c6b4fb46386ff7e8cca27eb0db750e7a8f

--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@ aanmelden voor dit seizoen?
  Typ deze code in op je toetsenbord:  ⬆⬆⬇⬇⬅➡⬅➡ ba    </p>
 </section><section><h1 id="floor-of-fame">Floor of Fame</h1>
 <p><img src="resources/image/algemeen/floor-of-fame-foto.jpg" alt="Floor of Fame Babs Balletschool"> 
-Onze vloer is een feit met dank aan alle lieve dansers, fans en de sponsor Go Cybersafe.
-templates/resources/image/algemeen/Logo-go-cybersafe.png</p>
+Onze vloer is een feit met dank aan alle lieve dansers, fans en de sponsor Go Cybersafe.</p>
+<p>*<a href="resources/image/algemeen/Logo-go-cybersafe.png">GoCybersafe</a> </p>
 </section><section></section>
         </main>
         <footer>
