Update from https://github.com/babsballetschool/website/commit/0f54c98151c1fa17fb5c313c6d20294625dd840e

--- a/wanneer.html
+++ b/wanneer.html
@@ -33,7 +33,8 @@
         </header>
         <main class="">
             <div class="where"><span>wanneer</span></div>
-            <section><h1 id="rooster--jaarplanning--wanneer-zijn-de-lessen---dansrooster-vanaf-26-augustus-2024">Rooster &amp; Jaarplanning:  <img src="resources/image/algemeen/balletklok.jpg" alt="Wanneer zijn de lessen?">   <strong>dansrooster:</strong> vanaf 26 augustus 2024</h1>
+            <section><h1 id="rooster--jaarplanning--wanneer-zijn-de-lessen">Rooster &amp; Jaarplanning:  <img src="resources/image/algemeen/balletklok.jpg" alt="Wanneer zijn de lessen?"></h1>
+<p> <strong>dansrooster:</strong> vanaf 26 augustus 2024</p>
 <iframe width="100%" height="830px" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vShF9QZbzqdBX1DwUQt7uIn9LxF8yweI4VsvrOrb3roSnKl87zY4YpYFR7b0MnEGFycEXP7QUxEP8kx/pubhtml?gid=1911534545&amp;single=true&amp;widget=true&amp;headers=false"></iframe>
 
 <h1 id="jaarplanning"><strong>Jaarplanning:</strong></h1>
