Update from https://github.com/babsballetschool/website/commit/7e56939c7a343464853b8c79cbc272b6f9554a0d

--- a/hoeveel.html
+++ b/hoeveel.html
@@ -33,14 +33,14 @@
         </header>
         <main class="">
             <div class="where"><span>hoeveel</span></div>
-            <section><h1 id="tarieven-seizoen-2023---2024"><strong>Tarieven seizoen 2023 - 2024</strong></h1>
+            <section><h1 id="tarieven-seizoen-2024---2025"><strong>Tarieven seizoen 2024 - 2025</strong></h1>
 <p><img src="resources/image/algemeen/portemonnaie%20ballet.jpg" alt="dansplezier bij Babs Balletschool"></p>
-<h2 id="reguliere-lessen--volledig-dansseizoen-2023-2024-zijn---38-lessen">Reguliere lessen = volledig dansseizoen (2023-2024 zijn +/- 38 lessen)</h2>
+<h2 id="reguliere-lessen--volledig-dansseizoen-2024-2025-zijn---38-lessen">Reguliere lessen = volledig dansseizoen (2024-2025 zijn +/- 38 lessen)</h2>
 <table>
-<tr><td>4 t/m 5 jaar:</td><td>€222,- per seizoen (45 min. 1 les per week)</td></tr>
-<tr><td>6 t/m 17 jaar:</td><td>€260,- per seizoen (60 min. 1 les per week)</td></tr>
-<tr><td>18 jaar en ouder:</td><td>€295,- per seizoen (60 min.1 les per week)</td></tr>
-<tr><td>extra Spitzen (15 min.):</td><td>€55,- per seizoen. (aansluitend a.d. les & in overleg) Hierop krijgt u geen korting.</td></tr>
+<tr><td>4 t/m 5 jaar:</td><td>€225,- per seizoen (45 min. 1 les per week)</td></tr>
+<tr><td>6 t/m 17 jaar:</td><td>€265,- per seizoen (60 min. 1 les per week)</td></tr>
+<tr><td>18 jaar en ouder:</td><td>€305,- per seizoen (60 min.1 les per week)</td></tr>
+<tr><td>extra Spitzen (15 min.):</td><td>€58,- per seizoen. (aansluitend a.d. les & in overleg) Hierop krijgt u geen korting.</td></tr>
 </table>
 
 
@@ -53,16 +53,16 @@
 <li>Een Korte Cursus is geen onderdeel van het reguliere rooster en is vaak een kennismakings cursus. Deze duren max.12 weken en worden vooraf aangekondigd. In rooster aangeduid als KC.</li>
 </ul>
 <table>
-<tr><td>Korte cursus (12 lessen) 45 min. 2-5 jaar:</td><td>€85,-</td></tr>
-<tr><td>Korte cursus (12 lessen) 60 min. 6 t/m 17 jaar:</td><td>€99,-</td></tr>
-<tr><td>Korte cursus (12 lessen) 60 min. vanaf 18 jaar:</td><td>€150 -</td></tr>
+<tr><td>Korte cursus (12 lessen) 45 min. 2-5 jaar:</td><td>€95,-</td></tr>
+<tr><td>Korte cursus (12 lessen) 60 min. 6 t/m 17 jaar:</td><td>€109,-</td></tr>
+<tr><td>Korte cursus (12 lessen) 60 min. vanaf 18 jaar:</td><td>€160 -</td></tr>
 </table>
 
 <p>De kortingen zijn niet van toepassing op de Korte Cursus.</p>
 </section><section><h2 id="dans-projecten">Dans Projecten</h2>
 <p>Dans projecten worden apart aangekondigd en kunnen varieren in prijs afhankelijk van de duur van het project.</p>
 </section><section><h2 id="betalings-regeling">Betalings regeling:</h2>
-<p>Is het bedrag voor u te hoog om in één keer te betalen dan kunt u ook een betalingsregeling aanvragen. Vraag gerust!  Mailen kan naar:<a href="mailto:&#98;&#97;&#x62;&#115;&#x40;&#98;&#x61;&#x62;&#x73;&#98;&#97;&#108;&#x6c;&#101;&#116;&#115;&#x63;&#x68;&#111;&#111;&#108;&#46;&#110;&#x6c;">&#98;&#97;&#x62;&#115;&#x40;&#98;&#x61;&#x62;&#x73;&#98;&#97;&#108;&#x6c;&#101;&#116;&#115;&#x63;&#x68;&#111;&#111;&#108;&#46;&#110;&#x6c;</a> </p>
+<p>Is het bedrag voor u te hoog om in één keer te betalen dan kunt u ook een betalingsregeling aanvragen. Vraag gerust!  Mailen kan naar:<a href="mailto:&#x62;&#97;&#x62;&#x73;&#x40;&#x62;&#97;&#98;&#x73;&#x62;&#97;&#108;&#108;&#101;&#116;&#x73;&#99;&#104;&#x6f;&#x6f;&#x6c;&#46;&#x6e;&#108;">&#x62;&#97;&#x62;&#x73;&#x40;&#x62;&#97;&#98;&#x73;&#x62;&#97;&#108;&#108;&#101;&#116;&#x73;&#99;&#104;&#x6f;&#x6f;&#x6c;&#46;&#x6e;&#108;</a> </p>
 </section>
         </main>
         <footer>
