Update from https://github.com/babsballetschool/website/commit/801ccfb77faae0812bfc7e6c6f350367b0652ec6

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ aanmelden voor aankomend seizoen?
 <p><img src="resources/image/algemeen/floor-of-fame-foto.jpg" alt="Floor of Fame Babs Balletschool"> 
 Onze vloer is een feit met dank aan alle lieve dansers, fans en de sponsor Go Cybersafe.</p>
 <p>*<a href="resources/image/algemeen/Logo-go-cybersafe.png">GoCybersafe</a> </p>
-</section><section></section>
+</section>
         </main>
         <footer>
             <nav>
