Update from https://github.com/babsballetschool/website/commit/795b6d9b316c6b29b421a5ac80e136229cb91d84

--- a/wanneer.html
+++ b/wanneer.html
@@ -39,8 +39,7 @@
 
 <h1 id="jaarplanning"><strong>Jaarplanning:</strong></h1>
 <p><strong>opstart week 23</strong>       maandag 26 augustus 2024    </p>
-<p><strong>Open Dag</strong>                  zondag 1 september 2024
-Opening cultureel seizoen in samenwerking met Theater De KiK en muziekschool All Music. </p>
+<p><strong>Open Dag</strong>                  zondag 1 september 2024<br>(Opening cultureel seizoen in samenwerking met Theater De KiK en muziekschool All Music.) </p>
 <p><strong>Paardenmarkt</strong>              maandag 2 september 2024
 (er zijn die dag geen lessen) </p>
 <p><strong>Sjors Sportief week</strong>       9 t/m 13 september  2024
