Update from https://github.com/babsballetschool/website/commit/b44b32b3c644c6688265e3f15d26867b8baa800f

--- a/index.html
+++ b/index.html
@@ -33,13 +33,19 @@
         </header>
         <main class="">
             <div class="where"><span>home</span></div>
-            <section><h1 id="dans-plezier">Dans plezier</h1>
+            <section><h1 id="zomerstop">Zomerstop</h1>
+<p><a href="resources/image/algemeen/zomervakantie.JPG.jpg">Zomervakantie bij Babs Balletschool</a> 
+Tijdens de zomermaanden zijn er geen lessen. 
+De administratie is gesloten van 15 juli t/m 7 augustus.
+Een hele mooie zomer gewenst en tot dans in augustus! </p>
+</section><section><h1 id="dans-plezier">Dans plezier</h1>
 <p>Plezier in dansen is er voor groot en klein. <img src="resources/image/algemeen/kinderballet%20(2).JPG" alt="dansplezier bij Babs Balletschool"> 
-Wil je dit zelf ervaren? Van 24 t/m 27 juni is er een orientatie week waar je vrijblijvend proeflessen mag komen doen. Stuur een mail voor het aanvragen van een proefles <a href="mailto:babs@babsballetschool.nl">contact</a></p>
+Wil je dit zelf ervaren? Vanaf 26 augustus kun je vrijblijvend proeflessen komen doen. Stuur een mail voor het aanvragen van een proefles <a href="mailto:babs@babsballetschool.nl">contact</a></p>
 </section><section><h1 id="dansrooster--jaarplanning">Dansrooster &amp; jaarplanning</h1>
-<p><img src="resources/image/algemeen/balletklok.jpg" alt="dansrooster 2024-2025 bij Babs Balletschool"> 
-<a href="https://www.babsballetschool.nl/wanneer.html">Rooster 2024-2025</a>
-aanmelden voor aankomend seizoen? 
+<p>Nieuw rooster seizoen 24-25:
+<img src="resources/image/algemeen/balletklok.jpg" alt="dansrooster 2024-2025 bij Babs Balletschool"> 
+<a href="https://www.babsballetschool.nl/wanneer.html">Rooster 2024-2025</a></p>
+<p>Inschrijven voor seizoen 24-25:
 <a href="https://docs.google.com/forms/d/e/1FAIpQLScKKMDE3qj1KcmIxWGIdN7Re943kAck9iCVdcWpYOsYjp8lLA/viewform?usp=sf_link">Inschrijfformulier</a></p>
 </section><section><h1 id="ballet-spelletje-balletris">Ballet Spelletje Balletris</h1>
 <p><img src="resources/image/balletris/babsballetschool-logo.gif" alt="dansplezier bij Babs Balletschool"> 
