Update from https://github.com/babsballetschool/website/commit/f46b11241cca4ff42775927e002e779ebbb8e789

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         </header>
         <main class="">
             <div class="where"><span>home</span></div>
-            <section></section><section><h1 id="zomerstop">Zomerstop</h1>
+            <section></section><section><h1 id="zomer">Zomer</h1>
 <p><img src="resources/image/algemeen/zomervakantie.JPG.jpg" alt="Zomervakantie bij Babs Balletschool"> 
 Tijdens de zomermaanden zijn er geen lessen. 
 De administratie is gesloten van 15 juli t/m 7 augustus.
