Update from https://github.com/babsballetschool/website/commit/a9e82ad858e1694db13c3a1e186fbe7ce2e2f16e

--- a/kleding.html
+++ b/kleding.html
@@ -35,8 +35,7 @@
             <div class="where"><span>kleding</span></div>
             <section><h1 id="kledingvoorschrift">Kledingvoorschrift</h1>
 <p>Het dragen van de juiste danskleding is voor de leerlingen essentieel om goed te kunnen bewegen en voor de docent noodzakelijk voor het geven van goede correcties. Het geeft tevens een gevoel van rust en éénheid.</p>
-<p>De geschikte danskleding koopt u via theaterwinkel &quot;PODIUM&quot;
-<a href="http://www.podium-nijmegen.nl">www.podium-nijmegen.nl</a></p>
+<p>De geschikte danskleding koopt u in een balletwinkel, zoals <a href="http://www.readytodance.nl">www.readytodance.nl</a></p>
 <p><strong>Algemeen:</strong></p>
 <ul>
 <li>Het haar dient te worden opgestoken in knot of staartje, plukken uit het gezicht, geen los haar!</li>
@@ -48,17 +47,17 @@
 <p><img src="resources/image/algemeen/peuterdans%201.jpg" alt="Kleding voorschrift Babs Balletschool"></p>
 <ul>
 <li>makkelijk zittende kleding, legging met hemdje of een ballet/gympakje. </li>
-<li>leren balletschoenen</li>
+<li>canvas balletschoenen zonder anti-slip zool!</li>
 </ul>
 </section><section><h1 id="ballet-4-tm-6-jaar-k1--k2">ballet 4 t/m 6 jaar: (K1 &amp; K2)</h1>
 <p><img src="resources/image/algemeen/kinderballet%20(2).JPG" alt="Kleding voorschrift Babs Balletschool"></p>
 <p><strong>Combinatie 1:</strong></p>
 <ul>
-<li><p>Roze ballet pak hemdmodel of spaghettibandjes met vast rokje. (bijv. de Intermezzo 3057)</p>
+<li><p>Roze of wit ballet pak hemdmodel of spaghettibandjes met vast rokje. (bijv. de Intermezzo 3057)</p>
 </li>
-<li><p>Roze ballet panty met voetjes</p>
+<li><p>ballet panty met voetjes in huidskleur of roze</p>
 </li>
-<li><p>Roze leren balletschoenen</p>
+<li><p>canvas balletschoenen zonder anti-slip zool in huidskleur of roze</p>
 <p>   Of:</p>
 </li>
 </ul>
@@ -66,7 +65,7 @@
 <ul>
 <li>Zwarte short of legging.</li>
 <li>Wit hemd (strak) of wit balletpak</li>
-<li>Zwarte balletschoenen</li>
+<li>canvas balletschoenen zwart</li>
 </ul>
 </section><section><h1 id="ballet-7-tot-9-k3--k4">ballet 7 tot 9: (K3 &amp; K4)</h1>
 <p><img src="resources/image/algemeen/IMG_7120.jpg" alt="Kleding voorschrift Babs Balletschool">
@@ -74,9 +73,9 @@
 <ul>
 <li><p>Zwart balletpak hemdmodel of spaghettibandjes.</p>
 </li>
-<li><p>Roze balletpanty met voetjes.</p>
+<li><p>balletpanty met voetjes in huidskleur of roze</p>
 </li>
-<li><p>Roze leren balletschoenen.</p>
+<li><p>canvas balletschoenen zonder anti-slip zool in huidskleur of roze</p>
 </li>
 <li><p>Zwart rokje (niet verplicht) </p>
 <p>   Of:</p>
@@ -93,8 +92,8 @@
 <p><strong>combinatie 1:</strong></p>
 <ul>
 <li>Zwart balletpak.</li>
-<li>Roze balletpanty met voetjes.</li>
-<li>Roze canvas balletschoenen met splitzool.</li>
+<li>balletpanty met voetjes in huidskleur of roze</li>
+<li>canvas balletschoenen met splitzool in huidskleur of roze</li>
 <li>Zwart broekje of rokje. (niet verplicht)</li>
 </ul>
 <p>Of:</p>
@@ -102,14 +101,14 @@
 <ul>
 <li>Zwarte legging.</li>
 <li>Zwart hemd (strak) of Zwart balletpak.</li>
-<li>zwarte leren/Canvas balletschoenen</li>
+<li>canvas balletschoenen zwart</li>
 </ul>
 </section><section><h1 id="ballet-volwassenen">Ballet volwassenen</h1>
 <p><img src="resources/image/algemeen/Klassiekballet%20volwassenen.JPG" alt="Kleding voorschrift Babs Balletschool"></p>
 <ul>
 <li>Zwart Balletpak</li>
-<li>Zwarte legging of roze/zwarte panty.</li>
-<li>Roze canvas balletschoenen met splitzool.</li>
+<li>zwarte legging of  balletpanty</li>
+<li>canvas balletschoenen met splitzool in huidskleur of roze</li>
 </ul>
 </section><section><h1 id="jazz-ballet">Jazz ballet:</h1>
 <p><img src="resources/image/algemeen/Jazz%20ballet%20%20vanaf%209.jpg" alt="Kleding voorschrift Babs Balletschool"></p>
@@ -123,7 +122,7 @@
 <ul>
 <li>Zwart balletpak of zwarte top.</li>
 <li>Zwarte legging /jazzbroek of zwarte panty zonder voet.</li>
-<li>Blote voeten/ footundies of zwarte sokken</li>
+<li>Blote voeten/ footundies of zwarte sokken (geen anti-slip!)</li>
 </ul>
 </section><section><h1 id="flamenco">Flamenco:</h1>
 <p><img src="resources/image/algemeen/Flamencoles.JPG" alt="Kleding voorschrift Babs Balletschool"></p>
@@ -133,13 +132,10 @@
 <li>zwarte flamenco schoenen (zonder spijkertjes!) of dansschoenen Capezio 653.</li>
 </ul>
 </section><section><p><img src="resources/image/algemeen/Jubileumtshirt.JPG" alt="Feest, De Balletboetiek wordt Babs Balletschool"></p>
-<p>T-shirt van  Babs Balletschool :          Volw: €20,-</p>
-<p>Hoodie* zonder rits van Babs Balletschool:  Volw:€37,50,-/ Kids €35,-</p>
-<p>Hoodie* met rits van Babs Balletschool:     Volw: €42,50/ Kids €39,-</p>
-<p>*evt. personalized met je eigen naam voor €2,50 extra.</p>
-<p>evt is ook te bestellen; cropped shirts/legging/ tshirt lange mouw.</p>
+<p>T-shirt van  Babs Balletschool :          Volw: €22,-</p>
+<p>Leuke tas van de balletschool om alles in te doen? deze is te verkrijgen in de studio.</p>
 <p>te bestellen in zwart in diverse maten.
-bestel via <a href="mailto:&#98;&#x61;&#98;&#115;&#x40;&#98;&#x61;&#x62;&#115;&#x62;&#97;&#x6c;&#108;&#x65;&#x74;&#x73;&#x63;&#104;&#111;&#x6f;&#x6c;&#46;&#x6e;&#108;">&#98;&#x61;&#98;&#115;&#x40;&#98;&#x61;&#x62;&#115;&#x62;&#97;&#x6c;&#108;&#x65;&#x74;&#x73;&#x63;&#104;&#111;&#x6f;&#x6c;&#46;&#x6e;&#108;</a> </p>
+bestel via <a href="mailto:&#98;&#97;&#98;&#115;&#x40;&#x62;&#97;&#98;&#115;&#98;&#97;&#108;&#x6c;&#x65;&#116;&#x73;&#x63;&#104;&#111;&#x6f;&#108;&#x2e;&#110;&#108;">&#98;&#97;&#98;&#115;&#x40;&#x62;&#97;&#98;&#115;&#98;&#97;&#108;&#x6c;&#x65;&#116;&#x73;&#x63;&#104;&#111;&#x6f;&#108;&#x2e;&#110;&#108;</a> </p>
 </section><section><h1 id="hoe-maak-ik-een-balletknotje">Hoe maak ik een balletknotje</h1>
 <img class="inline" src="resources/image/algemeen/knotje%20maken%202jpg.jpg" alt="Kledingvoorschrift Babs Balletschool">
 
